[gd_scene load_steps=14 format=1]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menu/maquetteMenu.png" type="Texture" id=2]
[ext_resource path="res://Fonts/AlienAndCowBoys200.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Fonts/AlienAndCowBoys40.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Fonts/FallingSky40.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Sprites/Menu/QuitButton.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Menu/PlayButton2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Menu/HelpButton2.png" type="Texture" id=8]
[ext_resource path="res://musics/Menu.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sprites/Menu/HowTo.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Menu/NextHelpButton.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Menu/QuitHelpButton.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Menu/HowToTwo.png" type="Texture" id=13]

[node name="MainMenu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1922.0
margin/bottom = 1086.0
script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="Name" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 103.0
margin/right = 1169.0
margin/bottom = 285.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 0
text = "Stellar Wrath"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="website" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 755.0
margin/top = 1027.0
margin/right = 1122.0
margin/bottom = 1064.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.562866, 0.737241, 0.90625, 1 )
text = "www.dual-wielding.com"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GGJ17" type="Label" parent="."]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1155.0
margin/top = 463.0
margin/right = 1687.0
margin/bottom = 504.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.560784, 0.733333, 0.905882, 1 )
text = "Made during the OpenJam2017"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="QuitButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 70.0
margin/top = 891.0
margin/right = 440.0
margin/bottom = 1008.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="PlayButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1476.0
margin/top = 895.0
margin/right = 1846.0
margin/bottom = 1007.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="HelpButton" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 753.0
margin/top = 856.0
margin/right = 1123.0
margin/bottom = 968.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 9 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Help1" type="TextureFrame" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 443.0
margin/top = 35.0
margin/right = 1443.0
margin/bottom = 1035.0
texture = ExtResource( 10 )
stretch_mode = 0

[node name="NextHelpButton" type="TextureButton" parent="Help1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 869.0
margin/top = 622.0
margin/right = 954.0
margin/bottom = 704.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="QuitHelpButton" type="TextureButton" parent="Help1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 893.0
margin/top = 71.0
margin/right = 952.0
margin/bottom = 125.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Help2" type="TextureFrame" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 446.0
margin/top = 55.0
margin/right = 1446.0
margin/bottom = 1055.0
texture = ExtResource( 13 )
stretch_mode = 0

[node name="QuitHelpButton" type="TextureButton" parent="Help2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 890.0
margin/top = 51.0
margin/right = 949.0
margin/bottom = 105.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]

[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]

[connection signal="pressed" from="Help1/NextHelpButton" to="." method="_on_NextHelpButton_pressed"]

[connection signal="pressed" from="Help1/QuitHelpButton" to="." method="_on_QuitHelpButton_pressed"]

[connection signal="pressed" from="Help2/QuitHelpButton" to="." method="_on_QuitHelpButton_pressed"]


